--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,9 @@
 <h1>Caesar Cipher Encrypter</h1>
 
 <form action="/index" method="post">
-  <input type="text" placeholder="Your text here">
+  <input type="text" name="string" placeholder="Your text here">
   <button type="submit">Encrypt</button>
 </form>
+
+<p>Your text: <%= @string %></p>
+<p>Your cipher: <%= @cipher %></p>
