--- a/views/index.erb
+++ b/views/index.erb
@@ -1,18 +1,3 @@
-<h1>Caesar Cipher Encrypter</h1>
+<h1>Sinatra Web Games</h1>
 
-<form action="/index" method="post">
-  <input type="text" name="string" placeholder="Your text here">
-  <select name="shift">
-    <option disabled="disabled" selected="selected">Key</option>
-    <% (1..26).to_a.each do |i| %>
-      <option>+ <%= i %></option>
-    <% end %>
-  </select>
-  <button type="submit">Encrypt</button>
-</form>
-
-<% unless @string.to_s.empty? %>
-  <p>Your text: <%= @string %></p>
-  <p>Your key: +<%= @shift %></p>
-  <p>Your cipher: <%= @cipher %></p>
-<% end %>
+<a href="./caesarcipher">Caesar Cipher Encrypter</a>
