--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,6 @@
 <h1>Sinatra Web Games</h1>
 
-<a href="./caesarcipher">Caesar Cipher Encrypter</a>
-<a href="./hangman">Hangman</a>
+<ul>
+  <li><a href="./caesarcipher">Caesar Cipher Encrypter</a></li>
+  <li><a href="./hangman">Hangman</a></li>
+</ul>
