--- a/views/caesarcipher.erb
+++ b/views/caesarcipher.erb
@@ -1,18 +1,24 @@
-<h1>Caesar Cipher Encrypter</h1>
+<main>
 
-<form action="/caesarcipher" method="post">
-  <input type="text" name="string" placeholder="Your text here">
-  <select name="shift">
-    <option disabled="disabled" selected="selected">Key</option>
-    <% (1..26).to_a.each do |i| %>
-      <option>+ <%= i %></option>
-    <% end %>
-  </select>
-  <button type="submit">Encrypt</button>
-</form>
+  <h1 id="title">Caesar Cipher Encrypter</h1>
 
-<% unless @string.to_s.empty? %>
-  <p>Your text: <%= @string %></p>
-  <p>Your key: +<%= @shift %></p>
-  <p>Your cipher: <%= @cipher %></p>
-<% end %>
+  <form action="/caesarcipher" method="post">
+    <input type="text" name="string" placeholder="Your text here">
+    <select name="shift">
+      <option disabled="disabled" selected="selected">Key</option>
+      <% (1..26).to_a.each do |i| %>
+        <option>+ <%= i %></option>
+      <% end %>
+    </select>
+    <button type="submit">Encrypt</button>
+  </form>
+
+  <% unless @string.to_s.empty? %>
+    <div id="cipher_output">
+      <p><span class="bold">Your text: </span><%= @string %></p>
+      <p><span class="bold">Your key: </span>+<%= @shift %></p>
+      <p><span class="bold">Your cipher: </span><%= @cipher %></p>
+    </div>
+  <% end %>
+
+</main>
