--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,8 @@
-<h1>Sinatra Web Games</h1>
+<main>
+  <h1 id="title">Sinatra Web Games</h1>
 
-<ul>
-  <li><a href="./caesarcipher">Caesar Cipher Encrypter</a></li>
-  <li><a href="./hangman">Hangman</a></li>
-</ul>
+  <ul>
+    <li><a href="./caesarcipher">Caesar Cipher Encrypter</a></li>
+    <li><a href="./hangman">Hangman</a></li>
+  </ul>
+</main>
