--- a/public/css/caesarcipher.css
+++ b/public/css/caesarcipher.css
@@ -1,3 +1,25 @@
-h1 {
-  color: red;
+main {
+  border: 1px solid lightblue;
+  box-shadow: 0 5px 10px lightblue;
+  margin: 20px auto;
+  width: 440px;
+}
+
+#title {
+  margin: 20px;
+  text-align: center;
+}
+
+form {
+  margin: 20px;
+}
+
+#cipher_output {
+  margin: 10px auto;
+  width: 400px;
+  word-wrap: break-word;
+}
+
+.bold {
+  font-weight: bold;
 }
