--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,11 @@
-h1 {
-  color: blue;
+main {
+  border: 1px solid lightblue;
+  box-shadow: 0 5px 10px lightblue;
+  margin: 20px auto;
+  width: 440px;
+}
+
+#title {
+  margin: 20px;
+  text-align: center;
 }
