Add filestructure for mastermind game

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,5 +4,6 @@
   <ul>
     <li><a href="./caesarcipher">Caesar Cipher Encrypter</a></li>
     <li><a href="./hangman">Hangman</a></li>
+    <li><a href="./mastermind">Mastermind</a></li>
   </ul>
 </main>
