--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,7 @@
       <a href="./index">Home</a>
       <a href="./caesarcipher">Caesar Cipher Encrypter</a>
       <a href="./hangman">Hangman</a>
+      <a href="./mastermind">Mastermind</a>
     </nav>
 
     <article>
