--- a/public/css/mastermind.css
+++ b/public/css/mastermind.css
@@ -3,9 +3,164 @@ main {
   box-shadow: 0 5px 10px lightblue;
   margin: 20px auto;
   width: 440px;
+  text-align: center;
 }
 
-#title {
+h2 {
+  margin: 20px;
+}
+
+h3 {
+  margin: 10px;
+}
+
+button {
+  margin: 5px auto;
+  margin-bottom: 10px;
+}
+
+.title {
   margin: 20px;
   text-align: center;
+}
+
+.game_select {
+  margin: 10px auto;
+  height: 50px;
+}
+
+.game_select button {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  width: 125px;
+}
+
+.code_setter {
+  margin: 10px auto;
+  margin-bottom: 20px;
+  height: 100px;
+  width: 400px;
+}
+
+.code_setter button {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+.board {
+  background-color: white;
+  border: 1px solid lightblue;
+  margin: auto;
+  width: 250px;
+}
+
+.interactive {
+  padding: 5px 0;
+  margin: 0 auto;
+  height: 100px;
+  width: 400px;
+}
+
+.interactive button {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
+td {
+  border: 1px solid lightblue;
+  border-radius: 14px;
+  height: 24px;
+  width: 24px;
+  padding: 0;
+}
+
+.code_table {
+  margin: 10px auto;
+}
+
+.guess_table {
+  display: inline-block;
+}
+
+.guess_table tr {
+  height: 24px;
+}
+
+.guess_table tr.spacer {
+  height: 0.7px;
+}
+
+.guess_table td {
+  border-radius: 14px;
+  height: 24px;
+  width: 24px;
+}
+
+.hint_table {
+  display: inline-block;
+}
+
+.hint_table tr {
+  height: 12px;
+}
+
+.hint_table tr.spacer {
+  height: 0.7px;
+}
+
+.hint_table td {
+  border-radius: 6px;
+  height: 10px;
+  width: 10px;
+}
+
+.round_counter {
+  border: 1px solid white;
+  padding-right: 5px;
+}
+
+.Blue {
+  background-color: blue;
+  border: 1px solid blue;
+}
+
+.Green{
+  background-color: green;
+  border: 1px solid green;
+}
+
+.Orange {
+  background-color: orange;
+  border: 1px solid orange;
+}
+
+.Purple {
+  background-color: purple;
+  border: 1px solid purple;
+}
+
+.Red {
+  background-color: red;
+  border: 1px solid red;
+  color: red;
+}
+
+.Yellow {
+  background-color: yellow;
+  border: 1px solid yellow;
+}
+
+.V {
+  background-color: black;
+  border: 1px solid black;
+}
+
+.x {
+  background-color: gray;
+  border: 1px solid gray;
+}
+
+#newgame {
+  margin: 0 20px 10px 0;
+  text-align: right;
 }
